--- a/CucumberPOCAngularApplication/src/test/resources/configs/config.properties
+++ b/CucumberPOCAngularApplication/src/test/resources/configs/config.properties
@@ -1,2 +1,5 @@
 browser= chrome
 appURL= https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+dbpath = jdbc:mysql://localhost:3306/gayudb
+dbUname= root
+dbPass= RootPass@33
